# IntegrateAI

./: README.md  output.txt
backend/: .gitignore  README.md  ai_agent.py  connectors.py  main.py  mcp_server.py  models.py  pyproject.toml  rl_optimizer.py  simulate_traffics.py  sync_engine.py  sync_hashes.json  sync_metrics.json  test_sync_patterns.py
backend/Connectors/: AirTableConnector.py  GoogleSheetsConnector.py
backend/schemas/: __init__.py  chat.py  integration.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: Sidebar.tsx  StreamingText.tsx
frontend/lib/: api-url.ts  api.ts
frontend/types/: Action.ts  Chat.ts  Integration.ts  Message.ts
