[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "google-auth>=2.49.2",
    "google-generativeai>=0.8.6",
    "gspread>=6.2.1",
    "pyairtable>=3.3.0",
    "requests>=2.33.1",
    "smartsheet-python-sdk>=3.7.2",
    "uvicorn>=0.44.0",
]
